--- a/servicios.html
+++ b/servicios.html
@@ -71,7 +71,13 @@
                     <span class="servicio__info">10:00 AM</span>
                 </p>
                 <p class="servicio_descripcion">
-                    Donec tempor, nisl et rhoncus viverra, turpis enim convallis ligula, non hendrerit nulla tortor nec odio. Morbi non mattis nunc, elementum auctor arcu. Aliquam vestibulum arcu non sem porta auctor. Nam vel congue ligula, eu condimentum felis. Nunc aliquam hendrerit odio sit amet venenatis. Nunc varius, libero a tempor rutrum, nulla risus congue velit, nec suscipit nibh lectus ac dolor. Nulla facilisi.
+                    Creemos que la familia es el pilar fundamental de la iglesia, fomentamos la comunion y la pasión por la busqueda a Dios, es por esa razón que inculcamos que nuestro primer ministerio como hermanos en Cristo es nuestra familia desde la casa hacia la iglesia.
+                </p>
+                <p class="servicio_descripcion">
+                    Dios nos creó para vivir en familia, por ello no nos debe extrañar que se hable mucho acerca de este tema en las Escrituras. Dios creó a los humanos para que vivieran en armonía los unos con los otros, en numerosas ocasiones por medio de la biblia, se revela la importancia que tienen las relaciones familiares para Dios, por lo tanto, cuida el núcleo que el señor te ha dado, levanta un altar continuo de oración donde todos juntos puedan adorar a Dios y así hacerse fuerte en medio de los procesos que puedan tener
+
+                    <span class="sobre-nosotros__title"><br> He aquí, herencia de Jehová son los hijos; Cosa de estima el fruto del vientre.
+                    Salmos 127:3</span> 
                 </p>            
             </div> <!--.servicio__informacion-->
          </div> <!--servicio-->
@@ -92,7 +98,15 @@
                     <span class="servicio__info">07:30 PM</span>
                 </p>
                 <p class="servicio_descripcion">
-                    Donec tempor, nisl et rhoncus viverra, turpis enim convallis ligula, non hendrerit nulla tortor nec odio. Morbi non mattis nunc, elementum auctor arcu. Aliquam vestibulum arcu non sem porta auctor. Nam vel congue ligula, eu condimentum felis. Nunc aliquam hendrerit odio sit amet venenatis. Nunc varius, libero a tempor rutrum, nulla risus congue velit, nec suscipit nibh lectus ac dolor. Nulla facilisi.
+                    El poder del Cristiano se forja en la oración, la fuerza adquirida por medio de la oración a Dios nos prepará para nuestros deberes cotidianos.
+                    <br>
+                    Las tentaciones a que estamos diariamente expuestos hacen de la oración una necesidad. Con el fin de ser mantenidos por el poder de Dios mediante la fe, los deseos de la mente debieran ascender continuamente en oración.
+                    <br>
+                    Cuando estamos expuestos por influencias destinadas a apartarnos de Dios, nuestras peticiones de ayuda y fuerza deben ser sin cesar. A menos que así sea, nunca tendremos éxito en doblegar nuestro orgullo y vencer el poder que nos tienta a cometer excesos pecaminosos que nos apartan de nuestro Salvador.
+                    <br>
+                    <span class="sobre-nosotros__title">Filipenses 4.6 nos da la respuesta: «Por nada estéis afanosos, sino sean conocidas vuestras peticiones 
+                    delante de Dios en toda oración y ruego
+                    </span>
                 </p>            
             </div> <!--.servicio__informacion-->
          </div> <!--servicio-->
@@ -113,7 +127,13 @@
                     <span class="servicio__info">07:30 PM</span>
                 </p>
                 <p class="servicio_descripcion">
-                    Donec tempor, nisl et rhoncus viverra, turpis enim convallis ligula, non hendrerit nulla tortor nec odio. Morbi non mattis nunc, elementum auctor arcu. Aliquam vestibulum arcu non sem porta auctor. Nam vel congue ligula, eu condimentum felis. Nunc aliquam hendrerit odio sit amet venenatis. Nunc varius, libero a tempor rutrum, nulla risus congue velit, nec suscipit nibh lectus ac dolor. Nulla facilisi.
+                    Escudriñad las Escrituras; porque a vosotros os parece que en ellas tenéis la vida eterna; y ellas son las que dan testimonio de mí; y no queréis venir a mí para que tengáis vida.
+                    <br>
+                    <span class="sobre-nosotros__title">¿Qué es la vida eterna?</span>
+                    <br>
+                    La vida eterna se refiere a la existencia continua e interminable que nunca termina. Es una vida libre de dolor, sufrimiento, muerte y tristeza. La vida eterna no es solo una vida sin fin, sino una vida llena de la presencia de Dios. En otras palabras, la vida eterna es una relación eterna con Dios. La Biblia nos dice que esta vida eterna solo puede ser encontrada en Jesucristo (Juan 14:6).
+                    <br>
+                    Escudriñar las Escrituras es una de las mayores bendiciones que tenemos como creyentes. A través del estudio de la Biblia, podemos acercarnos a Dios y a Jesucristo. Podemos encontrar consuelo en los momentos difíciles, sabiduría en los momentos de confusión y dirección en los momentos de incertidumbre. Al buscar en las Escrituras, podemos encontrar el camino hacia la vida eterna y una comprensión más profunda de nuestro Creador.
                 </p>            
             </div> <!--.servicio__informacion-->
          </div> <!--servicio-->
