Add photo and text by minister, create MOCK_DATA, implement health check

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
             </div>
         </div>
         <div class="slide-container"> 
-            <div class="slides">              
-              <img class="active" style="background-image: url(img/Culto7.jpg); height: 60rem; background-size: 100% 100%; background-repeat: no-repeat; background-position: center center;">
+            <div class="slides">
+                <!--class="active"-->              
+              <img  style="background-image: url(img/Culto7.jpg); height: 60rem; background-size: 100% 100%; background-repeat: no-repeat; background-position: center center;">
               <img style="background-image: url(img/Cultos.jpg); height: 60rem; background-size: 100% 100%; background-repeat: no-repeat; background-position: center center;">
               <img style="background-image: url(img/Invitacion.jpg); height: 60rem; background-size: 100% 100%; background-repeat: no-repeat; background-position: center center;">
               <img style="background-image: url(img/Culto7.jpg); height: 60rem; background-size: 100% 100%; background-repeat: no-repeat; background-position: center center;">
@@ -73,45 +74,83 @@
                  </div>
                  <div class="entrada__contenido">
                     <h4 class="no-margin">Evangelismo en las Calles</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis nulla blanditiis perspiciatis modi ad autem totam, 
-                        perferendis reiciendis sed? Totam quibusdam, nam voluptates provident atque voluptatem eligendi facere ex magnam?</p>
-                    <a href="ministerio.html" class="boton boton--primario">Leer Mas...</a>
+                    <p>Id por todo el mundo y predicad el evangelio a toda criatura. <br> El que creyere y fuere bautizado, será salvo; <br> mas el que no creyere, será condenado.</p>
+                    <a href="ministerio.html?id=1" class="boton boton--primario">Leer Mas...</a>
                  </div>
             </article> 
             
             <article class="entrada">
                 <div class="entrada__imagen">
-                   <img loading="lazy" src="img/Chiquitos.jpeg" alt="Imagen Evangelismo">
+                   <img loading="lazy" src="img/Chiquitos.jpeg" alt="Imagen Escuela Biblica">
                 </div>
                 <div class="entrada__contenido">
                    <h4 class="no-margin">Clases de Escuela Biblica</h4>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis nulla blanditiis perspiciatis modi ad autem totam, 
-                       perferendis reiciendis sed? Totam quibusdam, nam voluptates provident atque voluptatem eligendi facere ex magnam?</p>
-                   <a href="ministerio.html" class="boton boton--primario">Leer Mas...</a>
+                   <p>Pero Jesús dijo: Dejad a los niños, y no les impidáis que vengan a mí, <br> porque de los que son como éstos es el reino de los cielos</p>
+                   <a href="ministerio.html?id=2" class="boton boton--primario">Leer Mas...</a>
                 </div>
            </article>
 
            <article class="entrada">
                 <div class="entrada__imagen">
-                <img loading="lazy" src="img/Alabanzas.jpeg" alt="Imagen Evangelismo">
+                <img loading="lazy" src="img/Alabanzas.jpeg" alt="Imagen Alabanzas">
                 </div>
                 <div class="entrada__contenido">
                 <h4 class="no-margin">Ministerio de Alabanzas</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis nulla blanditiis perspiciatis modi ad autem totam, 
-                    perferendis reiciendis sed? Totam quibusdam, nam voluptates provident atque voluptatem eligendi facere ex magnam?</p>
-                <a href="ministerio.html" class="boton boton--primario">Leer Mas...</a>
+                <p>"¡Que todo lo que respira alabe al Señor!<br> ¡Aleluya! ¡Alabado sea el Señor!</p>
+                <a href="ministerio.html?id=3" class="boton boton--primario">Leer Mas...</a>
                 </div>
            </article>
 
            <article class="entrada">
             <div class="entrada__imagen">
-               <img loading="lazy" src="img/danzas.jpeg" alt="Imagen Evangelismo">
+               <img loading="lazy" src="img/ElAmadoViene.jpeg" alt="Imagen Danza">
             </div>
             <div class="entrada__contenido">
                <h4 class="no-margin">Ministerio de Danza</h4>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis nulla blanditiis perspiciatis modi ad autem totam, 
-                   perferendis reiciendis sed? Totam quibusdam, nam voluptates provident atque voluptatem eligendi facere ex magnam?</p>
-               <a href="ministerio.html" class="boton boton--primario">Leer Mas...</a>
+               <p>Y David danzaba con toda su fuerza delante de Jehová;<br> y estaba David vestido con un efod de lino 2</p>
+               <a href="ministerio.html?id=4" class="boton boton--primario">Leer Mas...</a>
+            </div>            
+       </article>
+       <article>
+        <div class="entrada__imagen">
+               <img loading="lazy" src="img/Diacono.png" alt="Imagen Danza">
+            </div>
+            <div class="entrada__contenido">
+               <h4 class="no-margin">Ministerio de Diaconos</h4>
+               <p>Los diáconos asimismo deben ser honestos, sin doblez, no dados a mucho vino, no codiciosos de ganancias deshonestas; que guarden el misterio de la fe con limpia conciencia</p>
+               <a href="ministerio.html?id=5" class="boton boton--primario">Leer Mas...</a>
+            </div>
+       </article>
+
+       <article>
+        <div class="entrada__imagen">
+               <img loading="lazy" src="img/CultoDamas.jpeg" alt="Imagen Damas">
+            </div>
+            <div class="entrada__contenido">
+               <h4 class="no-margin">Ministerio de Damas</h4>
+               <a href="ministerio.html?id=6" class="boton boton--primario">Leer Mas...</a>
+               <p>Las mujeres juegan un rol muy importante en las iglesias, desde el inicio de las escrituras observamos una relación complementaria entre el hombre y la mujer a quienes Dios creó a su imagen.</p>
+            </div>
+       </article>
+
+        <article>
+        <div class="entrada__imagen">
+               <img loading="lazy" src="img/CultoCaballeros.jpg" style="height: 45rem; width: 80rem;" alt="Imagen Caballeros">
+            </div>
+            <div class="entrada__contenido">
+               <h4 class="no-margin">Ministerio de Caballeros</h4>
+               <a href="ministerio.html?id=7" class="boton boton--primario">Leer Mas...</a>
+               <p>Quiero, pues que los hombres oren en todo lugar, levantando las manos santas.</p>
+            </div>
+       </article>
+       <article>
+        <div class="entrada__imagen">
+               <img loading="lazy" src="img/ReunionJovenes.jpeg" style="height: 45rem; width: 80rem;" alt="Imagen Jovenes">
+            </div>
+            <div class="entrada__contenido">
+               <h4 class="no-margin">Ministerio de Jovenes</h4>
+               <a href="ministerio.html?id=8" class="boton boton--primario">Leer Mas...</a>
+               <p>Ninguno tenga en poco tu juventud, sino sé ejemplo de los creyentes en palabra, conducta, amor, espíritu, fe y pureza.</p>
             </div>
        </article>
          </main>
