--- a/tesoreria.html
+++ b/tesoreria.html
@@ -567,8 +567,9 @@
         
         
 
-           <div class="campo">
+           <div id="fieldsImg" class="campo">
                <input type="submit" value="Enviar" class="boton boton--primario">
+               <!-- <img src="" class="conected" alt="wireles"> -->
            </div>
 
        </form>
